--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +15,21 @@
         android:theme="@style/Theme.CafeteriaUDB"
         tools:targetApi="31">
         <activity
+            android:name=".activities.EditarActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.CuentaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.AgregarActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.MainActivityAdmin"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -21,6 +38,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
